<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.luano.a78912.jokenpoapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/opcoes"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/pedra" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:src="@drawable/papel" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/tesoura" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/ultimajogada"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginRight="135dp"
            android:text="@string/jogadaPlayer"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/jogadaPC"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/resultadoImagemPlayer"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/tesoura" />

        <ImageView
            android:id="@+id/resultadoImagemInimigo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pedra" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/resultadoFrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/venceu"
        android:textColor="@color/vitoria"
        android:textSize="25sp" />


</LinearLayout>
